# overseer

./: .gitignore  .goreleaser.yaml  Brewfile  Brewfile.local.example  Makefile  README.md  ROADMAP.md  justfile  llms.txt
.github/workflows/: ci.yml  docs.yml  publish-python.yml  publish-typescript.yml  release.yml
brain-example/overseer/: Brewfile.example  Brewfile.local.example  config.yaml.example
brain-example/overseer/plugins/: README.md
cli/: go.mod  go.sum  main.go
cli/cmd/: accounts.go  brain.go  brew.go  clip.go  config.go  context.go  daily.go  env.go  focus.go  focus_test.go  gcal.go  generate_docs.go  git.go  git_profile.go  github.go  gitlabcmd.go  help.go  init.go  jira.go  json.go  mcp.go  native_plugins.go  note.go  notify.go  plugin.go  plugins_init.go  prs.go  repos.go  root.go  run.go  setup.go  slack.go  ssh.go  standup.go  status.go  update.go  weekly.go
cli/internal/claudeai/: claudeai.go
cli/internal/config/: config.go  embed.go  profile_writer.go  schema.json
cli/internal/gcal/: gcal.go
cli/internal/github/: github.go
cli/internal/gitlab/: gitlab.go
cli/internal/jira/: jira.go
cli/internal/notify/: notify.go
docs/: go.mod  hugo.toml
docs/content/: _index.md
dotfiles/git/: .gitconfig
dotfiles/shell/: .zshrc
scripts/: dev.sh  install.sh  setup.sh
sdk/: design.md
sdk/python/: README.md  pyproject.toml
sdk/python/overseer_sdk/: __init__.py  context.py  notify.py  plugin.py  styles.py
sdk/python/tests/: test_context.py  test_plugin.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
(+90 files in other folders)
