[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overseer-sdk"
version = "0.1.0"
description = "Python SDK for building Overseer plugins"
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[tool.hatch.build.targets.wheel]
packages = ["overseer_sdk"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"
