[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overseer-sdk"
version = "0.1.2"
description = "Python SDK for building Overseer plugins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.hatch.build.targets.wheel]
packages = ["overseer_sdk"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"
